--- a/profapp/templates/front/bootstrap/member_short.html
+++ b/profapp/templates/front/bootstrap/member_short.html
@@ -1,25 +1,25 @@
 {% import '_common/macros.html' as frontmacros %}
-<div class="member {% if member['company']['logo']['selected_by_user']['type'] != 'none' %}member-with-logo{% endif %}">
+<div class="membership {% if membership['company']['logo']['selected_by_user']['type'] != 'none' %}membership-with-logo{% endif %}">
     <div class="tags-at-right nw">
-        {% for tag in member.tags %}
-            {{ frontmacros.tag(tag, tags) }}
+        {% for tag in membership.tags %}
+            {{ frontmacros.tag(tag, tags if tags else {'all': [], 'selected_names': [], 'url_toggle_tag': url_catalog_tag}) }}
         {% endfor %}
     </div>
     <h3>
-        <a href="{{ url_for('front.company_page', member_company_id = member['company']['id'], member_company_name = member['company']['name']) }}">{{ member['company']['name']|safe }}</a>
+        <a href="{{ url_for('front.company_page', member_company_id = membership['company']['id'], member_company_name = membership['company']['name']) }}">{{ membership['company']['name']|safe }}</a>
     </h3>
     <table class="t200logo">
         <tr>
-            <td>{% if member['company']['logo']['selected_by_user']['type'] != 'none' %}
-                <img class="company-logo" {{ prImageUrl(member['company']['logo']['url']) }} />{% endif %}
+            <td>{% if membership['company']['logo']['selected_by_user']['type'] != 'none' %}
+                <img class="company-logo" {{ prImageUrl(membership['company']['logo']['url']) }} />{% endif %}
             </td>
             <td>
-                <div class="short-text">{{ member['company']['short_description']|safe }}</div>
-                {% if member['company']['country'] != '' %}
-                    <div>{{ __('Country') }}: {{ member['company']['country']|safe }}</div>
+                <div class="short-text">{{ membership['company']['short_description']|safe }}</div>
+                {% if membership['company']['country'] != '' %}
+                    <div>{{ __('Country') }}: {{ membership['company']['country']|safe }}</div>
                 {% endif %}
-                {% if member['company']['city'] != '' %}
-                    <div>{{ __('City') }}: {{ member['company']['city']|safe }}</div>
+                {% if membership['company']['city'] != '' %}
+                    <div>{{ __('City') }}: {{ membership['company']['city']|safe }}</div>
                 {% endif %}
             </td>
         </tr>
