--- a/profapp/static/front/bootstrap/css/style.css
+++ b/profapp/static/front/bootstrap/css/style.css
@@ -293,12 +293,13 @@ body.no-search .center-content {
 }
 
 /*company catalog*/
-.member {
+.membership {
     border: solid #EEAAEE thin;
     background-color: #fffaff;
     margin-bottom: 5px;
     padding: 0px 5px;
     overflow-x: hidden;
+    position: relative;
 }
 
 /*company pages*/
