--- a/profapp/static/front/bootstrap/css/style.css
+++ b/profapp/static/front/bootstrap/css/style.css
@@ -195,13 +195,24 @@ body.no-search .center-content {
 }
 
 /*tags*/
-.label {
+.tag {
+    background-color: #aaffaa;
+    margin: 2px;
+    display: inline-block;
+    padding: 1px 3px;
+    color: #555;
+    border: 1px solid transparent;
+    border-radius: 2px;
+}
+
+.tag-selected {
+    background-color: #ffaaaa;
     margin-right: 3px;
 }
 
-.label a {
+.tag a {
     white-space: nowrap;
-    color: white;
+    color: #555;
 }
 
 .tags-at-right {
