--- a/profapp/templates/front/bootstrap/division_articles.html
+++ b/profapp/templates/front/bootstrap/division_articles.html
@@ -8,9 +8,8 @@
     {% for article_id, article in articles.items() %}
         {% include 'article_short.html' %}
         {% if loop.index in wide_banners and portal.advs['wide_banner_' + wide_banners[loop.index]] %}
-            <div><a href="#"
+            <a href="#"
                     class="wide-banner">{{ portal.advs['wide_banner_' + wide_banners[loop.index]]|safe }}</a>
-            </div>
         {% endif %}
     {% else %}
         {% if tags.selected_names or search_text %}
