--- a/profapp/templates/tools/sso.html
+++ b/profapp/templates/tools/sso.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="{{ static_address('jquery/jquery.min.js') }}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     {% if profi_cookie != local_cookie %}
         <script>
