front and reader feed html cleanup

--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -94,6 +94,10 @@
     width: 100%;
 }
 
+.w25 {
+    width: 25%;
+}
+
 .h100 {
     height: 100%;
 }
@@ -646,4 +650,14 @@ div.pr-row:last-child div.pr-cell {
 
 .dn {
     display: none;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
