--- a/profapp/templates/front/bootstrap/_common/block_user.html
+++ b/profapp/templates/front/bootstrap/_common/block_user.html
@@ -1,8 +1,9 @@
 {% set p_main_domain = 'https://' + MAIN_DOMAIN %}
-{% set url_join = p_main_domain + '/auth/login_signup/?login_signup=signup&portal_id=' + portal.id %}
+{% set url_join = _URL_JOIN() %}
 
 <a style="{% if not g.user %}display: none; {% endif %}" aria-haspopup="true" id="profireader_user_link"
    href="
+
            {% if g.user %}{{ p_main_domain }}/users/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}"><img {{ prImageUrl(g.user.avatar.url if g.user else static_address('images/0.gif'), position = 'top') }}
         class="user-avatar"/></a>
 
@@ -11,6 +12,8 @@
         class="profireader-logo" src="{{ static_address('favicon.ico') }}"/></a>
 
 <script>
+    _USER = {% if g.user %}{{ g.user.get_client_side_dict()|tojson }}{% else %}{}{% endif %};
+
     window.addEventListener("message", function (messageevent) {
         if (messageevent.data && messageevent.data.profireader_session_id) {
             $.cookie('beaker.session.id', messageevent.data.profireader_session_id, {path: '/'});
@@ -18,6 +21,7 @@
 
         if (messageevent.data && messageevent.data.user {% if g.user and g.user.id %}
                     && messageevent.data.user.id !== '{{ g.user.id }}'{% endif %}) {
+            _USER = messageevent.data.user;
             $('#profireader_user_link').attr('href', '{{ p_main_domain }}/users/profile/' + messageevent.data.user.id);
             $('#profireader_user_link span').html(messageevent.data.welcome);
             $('#profireader_user_link img').css('background-image', 'url(' + messageevent.data.user.avatar.url + ')');
@@ -25,6 +29,7 @@
             $('#profireader_link').attr('href', '{{ p_main_domain }}').hide();
         }
         else if (messageevent.data && !messageevent.data.user) {
+            _USER = {};
             $('#profireader_user_link').attr('href', '//{{ url_join }}/');
             $('#profireader_user_link span').html(messageevent.data.welcome);
             $('#profireader_user_link img').css('background-image', 'none');
