--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -11,37 +11,39 @@
                     $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
             $scope.add_delete_favorite = '{{ url_for('index.add_delete_favorite') }}';
             $scope.add_delete_like = '{{ url_for('index.add_delete_like') }}';
+
+            $scope.add_delete_liked = {{ raw_url_for('index.reader_add_delete_liked')|safe }};
+            $scope.add_delete_favorite = {{ raw_url_for('index.reader_add_delete_favorite')|safe    }};
+            {#            url_for('front.add_delete_liked', publication_id =#}
+            {#         article['id'])#}
+
+
             $scope.tag_url = {{ raw_url_for('front.division')|safe }};
             $scope.url_publication_details = {{ raw_url_for('front.article_details')|safe }};
 
             {#            @front_bp.route('tags/<string:tags>/', methods=['GET'])#}
-            $scope.add_to_favorite = function (article) {
-                article.is_favorite = article['is_favorite'] ? False : True
-                $ok($scope.add_delete_favorite, {'article': article}, function (resp) {
-                    article.is_favorite = resp
-                })
-            };
+            {#            $scope.add_to_favorite = function (article) {#}
+            {#                article.is_favorite = article['is_favorite'] ? False : True#}
+            {#                $ok($scope.add_delete_favorite, {'article': article}, function (resp) {#}
+            {#                    article.is_favorite = resp#}
+            {#                })#}
+            {#            };#}
 
             $scope.loadNextPage('', function (resp) {
                 $scope.data.articles = $scope.data.articles ? $scope.data.articles : [];
                 $scope.data.articles = $scope.data.articles.concat(resp['articles']);
             });
 
-            $scope.like = function (article) {
-                $ok($scope.add_delete_like, {'article': article}, function (resp) {
-                    article.liked = resp.liked;
-                    article.list_liked_reader = resp.list_liked_reader
+            $scope.switch_like_or_favorite = function (article, what) {
+
+                var url = $scope[(what == 'liked') ? 'add_delete_liked' : 'add_delete_favorite']({publication_id: article['id']});
+                $ok(url, {'on': article['social_activity'][what] ? false : true}, function (resp) {
+                    console.log(article['social_activity'], resp['on'])
+                    article['social_activity'][what] = resp['on'];
+                    article['social_activity'][what + '_count'] = resp[what + '_count'];
+                    console.log(article['social_activity'])
                 })
             };
-
-            $scope.get_local_time = function (date) {
-                return moment(new Date(date)).format('Do MMMM YYYY, H:mm:ss');
-            };
-
-            $scope.getPopoverContent = function (content_list, width) {
-                return getPopoverContent(content_list, width)
-            }
-
 
         });
 
@@ -66,7 +68,7 @@
                             <a target="_blank" href="//{{ article.portal.host }}/">{{article.portal.name}}</a>
                             &rightarrow;
                             <a target="_blank" href="//{{ article.portal.host }}/{{ article.division.name}}/">{{article.division.name}}</a>
-                            <div class="item-publication-date">{{ get_local_time(article.publishing_tm) }}</div>
+                            <div class="item-publication-date">{{ moment(article.publishing_tm) }}</div>
                             <a target="_blank"
                                href="//{{ article.portal.host}}/_c/{{ article.company.id}}/{{ article.company.name}}"
                                class="item-company">{{ article.company.name}}</a>
@@ -83,36 +85,46 @@
                 </a>
 
                 <div class="item-short-content">
-
                     <h3 class="item-title">
                         <a target="_blank"
                            href="{{ url_publication_details({'publication_id': article.id, 'publication_title': article.title}, article.portal.host) }}">{{
                             article.title}}</a>
                     </h3>
-                    <p>{{ article.short}}</p>
-                    <hr/>
-                    </h3>
-                    <div class="row liked-favorite-band">
-
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <li><i class="fa fa-eye"></i> {{ article.read_count }}</li>
-                            <li class="liked" ng-click="like(article)" popover-trigger="mouseenter"
-                                popover-placement="top"
-                                uib-popover-html="getPopoverContent(article.list_liked_reader)">
-                                <i class="fa fa-thumbs-o-up"></i> 0</li>
-                            <li><i class="fa fa-comments-o"></i> 0</li>
-                            <li ng-click="add_to_favorite(article)">
-                                <i ng-if="!article.is_favorite" class="fa fa-bookmark-o"></i>
-                                <i ng-if="article.is_favorite" class="fa fa-bookmark"></i>
-                                {{_('Bookmark') }}</li>
-                            <li><i class="fa fa-share"></i>{{ _('Share') }}</li>
-                        </div>
-                    </div>
-                    <div class="item-additional-info">
-                    </div>
-                    <div class="bottom-hide"></div>
-                    <img pr-image="article.image_file_id" class="block-item-img bg-contain"/>
+                    <div>{{ article.short}}</div>
+                    <div ng-visible="article.author" class="fr">{{ article.author }}</div>
                 </div>
+                <br/>
+                <table class="w100 noselect">
+                    <tr>
+                        <td class="w25">
+                            <span class="fl"><i class="fa fa-eye"> <span>{{ _('Readers') }}</span>
+                            <readers_count>{{ article['read_count'] }}</readers_count>
+                            </i></span>
+                        </td>
+
+                        <td class="w25"><span class="disabled"><i class="fa fa-commenting-o">
+                            <span>{{ _('Comments') }}</span>
+                            <comments_count>0</comments_count></i></span>
+                        </td>
+                        <td class="w25"><span
+                                ng-click="switch_like_or_favorite(article, 'liked')">
+                    <i ng-class="{'fa-thumbs-o-up': !article.social_activity.liked, 'fa-thumbs-up': article.social_activity.liked}"
+                       class="fa link">
+                        <span>{{ _('Like') }}</span>
+                        <liked_count>{{ article.social_activity.liked_count }}</liked_count>
+                    </i></span></td>
+
+                        <td class="w25">
+                            <span ng-click="switch_like_or_favorite(article, 'favorite')">
+                            <i ng-class="{'fa-bookmark-o': !article.social_activity.favorite, 'fa-bookmark': article.social_activity.favorite}"
+                               class="fa link">
+                        <span>{{ _('Bookmark') }}</span>
+                        <bookmarked_count>{{ article.social_activity.favorite_count }}</bookmarked_count>
+                    </i></span></td>
+                    </tr>
+                </table>
+
+
             </div>
         </div>
         <div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-7">
