--- a/profapp/templates/front/bootstrap/division_articles.html
+++ b/profapp/templates/front/bootstrap/division_articles.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
-{% block title %}
-    {{ _('%(division_name)s - %(portal_name)s', {'portal_name': portal.name, 'division_name': division.name}) }}{% endblock %}
+{% block title -%}
+    {{ _('%(division_name)s - %(portal_name)s', {'portal_name': portal.name, 'division_name': division.name}) }}
+{%- endblock %}
 
 {% block center_content %}
     {% import '_common/macros.html' as frontmacros %}
