--- a/profapp/templates/front/bootstrap/search.html
+++ b/profapp/templates/front/bootstrap/search.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
-{% block title %}
-    {{ _('search - %(portal_name)s', {'portal_name': portal.name}) }}{% endblock %}
+{% block title -%}
+    {{ _('search - %(portal_name)s', {'portal_name': portal.name}) }}
+{%- endblock %}
 
 {% block center_content %}
     {% import '_common/macros.html' as frontmacros %}
