--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -24,7 +24,7 @@
 
     {% block bottom_content %}
         <div class="bottom-content">
-        {{ _('Profireader bottom text') }}
+        {{ __('__Profireader bottom text') }}
         </div>
    {% endblock %}
 
