sso bug fixed, more advs added in bootstrap front

--- a/profapp/templates/tools/sso.html
+++ b/profapp/templates/tools/sso.html
@@ -19,5 +19,8 @@
         </script>
     {% endif %}
 </head>
-<body>This iframe is used to consolidate sessions between domains</body>
+<body>
+{#{{ profi_cookie }} {{ local_cookie  }}#}
+This iframe is used to consolidate sessions between domains
+</body>
 </html>
