--- a/profapp/templates/auth/email/resend_confirmation.html
+++ b/profapp/templates/auth/email/resend_confirmation.html
@@ -1,2 +1,2 @@
 {{ _('Welcome %(user_name)s. Plese click %(url)s for email confirmation', {'user_name': user.full_name,
-'url': 'http://'+MAIN_DOMAIN+confirmation_url, _external:True}) }}
+'url': 'https://'+MAIN_DOMAIN+confirmation_url, _external:True}) }}
