--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -15,8 +15,9 @@
             </div>
             <div class="right-content">
                 {% block right_content %}
-                    <a href="#" class="vertical-banner">{{ portal.advs.right_banner_1|safe }}</a>
-                    <a href="#" class="vertical-banner">{{ portal.advs.right_banner_2|safe }}</a>
+                    {% for banner_num in ['1','2','3','4','5','6','7','8'] %}
+                        {% if portal.advs['right_banner_' + banner_num] %}<a href="#" class="vertical-banner">{{ portal.advs['right_banner_' + banner_num]|safe }}</a>{% endif %}
+                    {% endfor %}
                 {% endblock %}
             </div>
         {% endblock %}
