--- a/profapp/templates/front/bootstrap/member_short.html
+++ b/profapp/templates/front/bootstrap/member_short.html
@@ -6,7 +6,7 @@
         {% endfor %}
     </div>
     <h3>
-        <a href="{{ url_for('front.company_page', member_company_id = membership['company']['id'], member_company_name = membership['company']['name']) }}">{{ membership['company']['name']|safe }}</a>
+        <a href="{{ url_for('front.company_page', member_company_id = membership['company']['id'], member_company_name = membership['company']['name']) }}">{{ membership['company']|highlighted('name') }}</a>
     </h3>
     <table class="t200logo">
         <tr>
@@ -14,7 +14,7 @@
                 <img class="company-logo" {{ prImageUrl(membership['company']['logo']['url']) }} />{% endif %}
             </td>
             <td>
-                <div class="short-text">{{ membership['company']['short_description']|safe }}</div>
+                <div class="short-text">{{ membership['company']|highlighted('short_description') }}</div>
                 {% if membership['company']['country'] != '' %}
                     <div>{{ __('Country') }}: {{ membership['company']['country']|safe }}</div>
                 {% endif %}
