highlighting fragments and css bugs

--- a/profapp/static/front/bootstrap/css/style.css
+++ b/profapp/static/front/bootstrap/css/style.css
@@ -273,6 +273,8 @@ body.no-search .center-content {
 /*article-short*/
 .article-short {
     margin-bottom: 10px;
+    padding: 5px 5px 20px 5px;
+    position: relative;
 }
 
 .article-division-and-tags {
@@ -321,7 +323,7 @@ body.no-search .center-content {
 }
 
 .article .short-text-and-illustration {
-    padding: 0px 5px;
+    padding: 0px;
 }
 
 .article-short .short-text-and-illustration {
