--- a/profapp/static/front/rodynnifirmy/css/style.css
+++ b/profapp/static/front/rodynnifirmy/css/style.css
@@ -275,6 +275,8 @@ body.no-search .center-content {
 /*article-short*/
 .article-short {
     margin-bottom: 10px;
+    padding: 5px 5px 20px 5px;
+    position: relative;
 }
 
 .article-division-and-tags {
@@ -323,7 +325,7 @@ body.no-search .center-content {
 }
 
 .article .short-text-and-illustration {
-    padding: 0px 5px;
+    padding: 0px;
 }
 
 .article-short .short-text-and-illustration {
