--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -15,7 +15,7 @@
             </div>
             <div class="right-content">
                 {% block right_content %}
-                    {% for banner_num in ['1','2','3','4','5','6','7','8'] %}
+                    {% for banner_num in ['0','1','2','3','4','5','6','7','8','9'] %}
                         {% if portal.advs['right_banner_' + banner_num] %}<a href="#" class="vertical-banner">{{ portal.advs['right_banner_' + banner_num]|safe }}</a>{% endif %}
                     {% endfor %}
                 {% endblock %}
